# PRISM-EDA

./: .gitignore  README-A.md  README.md  api.py  backend.py  backend_A.py  forntend_A.py  frontend.py  pandas_eda_lab.html  pyproject.toml  run.sh  test_api.py  test_backend.py
PriSm_project_v2/: docker-compose.yml  notes
PriSm_project_v2/backend/: Dockerfile
PriSm_project_v2/backend/app/: main.py
PriSm_project_v2/backend/app/api/: routes.py
PriSm_project_v2/backend/app/core/: config.py  logging_config.py
PriSm_project_v2/backend/app/repository/: data_loader.py
PriSm_project_v2/backend/app/services/: analytics_service.py
PriSm_project_v2/scripts/: generate_data.py
PriSm_project_v2/streamlit_app/: Dockerfile  streamlit_app.py
