[project]
name = "prism"
version = "0.1.0"
description = "Automated EDA Pipeline using Streamlit and FastAPI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.35.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "requests>=2.32.0",
]
 
[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
]